change: openapi.ymlの定義を修正
